# image-renderer

./: CHANGELOG.md  CMakeLists.txt  FindGD.cmake  README.md  animation.sh  generate-image.sh  tutorial.sh
.github/workflows/: test-macos-latest.yml  test-ubuntu-latest.yml
desktop/: CMakeLists.txt  desktop.cpp  desktop.pro  theme.qss  window.cpp  window.h
examples/: animation-parallel.sh  animation.sh  cgs.txt  cornell-parallel.sh  cornell.sh  cornell.txt  demo-image.sh  generate-image.sh  materials.txt  mirrors.txt  scene.txt  test.txt  texture.txt
include/: actions.h  argh.h  camera.h  color.h  geometry.h  hdr-image.h  material.h  noise.h  parser.h  random.h  renderer.h  shape.h  texture.h
src/: color.cpp  geometry.cpp  hdr-image.cpp  image-renderer.cpp
test/: camera.cpp  color.cpp  geometry.cpp  hdr-image.cpp  material.cpp  parser.cpp  random.cpp  renderer.cpp  shape.cpp
tools/: bash-completion.bash  scenefile.vim
